# openapi/types/ObservableAPI.ts
@@ -203,6 +203,29 @@ export class ObservableQuestionsApi {
     }
 
     /**
+     * Get all questions.
+     * Get all questions
+     */
+    public getQuestions(_options?: Configuration): Observable<GetCategoryQuestions200Response> {
+        const requestContextPromise = this.requestFactory.getQuestions(_options);
+
+        // build promise chain
+        let middlewarePreObservable = from<RequestContext>(requestContextPromise);
+        for (let middleware of this.configuration.middleware) {
+            middlewarePreObservable = middlewarePreObservable.pipe(mergeMap((ctx: RequestContext) => middleware.pre(ctx)));
+        }
+
+        return middlewarePreObservable.pipe(mergeMap((ctx: RequestContext) => this.configuration.httpApi.send(ctx))).
+            pipe(mergeMap((response: ResponseContext) => {
+                let middlewarePostObservable = of(response);
+                for (let middleware of this.configuration.middleware) {
+                    middlewarePostObservable = middlewarePostObservable.pipe(mergeMap((rsp: ResponseContext) => middleware.post(rsp)));
+                }
+                return middlewarePostObservable.pipe(map((rsp: ResponseContext) => this.responseProcessor.getQuestions(rsp)));
+            }));
+    }
+
+    /**
      * Get a random question.
      * Get a random question
      */
